desktop version finished

--- a/index.html
+++ b/index.html
@@ -70,12 +70,10 @@
 
       <section class="air-quality section-general">
         <p class="section-title">
-          <span
-            ><img
-              src="./assets/images/leaf.svg"
-              alt="Imagem de uma folha"
-            />Qualidade do ar</span
-          >
+          <img
+            src="./assets/images/leaf.svg"
+            alt="Imagem de uma folha"
+          />Qualidade do ar
         </p>
         <div class="main-info-wrapper">
           <h3>Boa</h3>
@@ -93,12 +91,10 @@
 
       <section class="sun-time section-general">
         <p class="section-title">
-          <span
-            ><img
-              src="./assets/images/time.svg"
-              alt="Imagem de uma folha"
-            />Qualidade do ar</span
-          >
+          <img
+            src="./assets/images/time.svg"
+            alt="Imagem de uma folha"
+          />Qualidade do ar
         </p>
         <img
           src="./assets/images/sun-chart.svg"
@@ -108,47 +104,32 @@
 
       <section class="week-weather section-general">
         <div class="next-days-weather-wrapper">
-          <p>Amanhã</p>
+          <p class="day-of-the-week">Amanhã</p>
           <img src="./assets/images/clouds.svg" alt="Imagem de nuvens" />
-          <p>
-            <span class="max-temperature">21°C</span
-            ><span class="min-temperature">16°C</span>
-          </p>
+          <p>21° <span class="min-temperature">16°</span></p>
         </div>
         <div class="next-days-weather-wrapper">
-          <p>Sexta-Feira</p>
+          <p class="day-of-the-week">Sexta-Feira</p>
           <img src="./assets/images/sun.svg" alt="Imagem de sol" />
-          <p>
-            <span class="max-temperature">28°C</span
-            ><span class="min-temperature">20°C</span>
-          </p>
+          <p>28° <span class="min-temperature">20°</span></p>
         </div>
         <div class="next-days-weather-wrapper">
-          <p>Sábado</p>
+          <p class="day-of-the-week">Sábado</p>
           <img src="./assets/images/rain.svg" alt="Imagem de chuva" />
-          <p>
-            <span class="max-temperature">25°C</span
-            ><span class="min-temperature">21°C</span>
-          </p>
+          <p>25° <span class="min-temperature">21°</span></p>
         </div>
         <div class="next-days-weather-wrapper">
-          <p>Domingo</p>
+          <p class="day-of-the-week">Domingo</p>
           <img src="./assets/images/thunder.svg" alt="Imagem de trovoadas" />
-          <p>
-            <span class="max-temperature">20°C</span
-            ><span class="min-temperature">14°C</span>
-          </p>
+          <p>20° <span class="min-temperature">14°</span></p>
         </div>
         <div class="next-days-weather-wrapper">
-          <p>Segunda-Feira</p>
+          <p class="day-of-the-week">Segunda-Feira</p>
           <img
             src="./assets/images/sun-with-clouds.svg"
             alt="Imagem de sol com nuvens"
           />
-          <p>
-            <span class="max-temperature">24°C</span
-            ><span class="min-temperature">18°C</span>
-          </p>
+          <p>24° <span class="min-temperature">18°</span></p>
         </div>
       </section>
     </main>
